@@ -1,20 +1,16 @@
 package com.rentacar.ms_pagos.service;
 
-import com.rentacar.ms_pagos.dto.PagoDTO;
+import com.rentacar.ms_pagos.client.ReservaClient;
+import com.rentacar.ms_pagos.dto.*;
 import com.rentacar.ms_pagos.exception.ResourceNotFoundException;
 import com.rentacar.ms_pagos.mapper.PagoMapper;
 import com.rentacar.ms_pagos.model.Pago;
 import com.rentacar.ms_pagos.repository.PagoRepository;
-
 import lombok.RequiredArgsConstructor;
-
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
+import org.slf4j.*;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,119 +18,74 @@ import java.util.stream.Collectors;
 public class PagoService {
 
     private final PagoRepository pagoRepository;
+    private final ReservaClient reservaClient;
+    private static final Logger log = LoggerFactory.getLogger(PagoService.class);
 
-    private static final Logger log =
-            LoggerFactory.getLogger(PagoService.class);
-
-    // LISTAR
     public List<PagoDTO> findAll() {
-
         log.info("Listando pagos");
-
-        return pagoRepository.findAll()
-                .stream()
-                .map(PagoMapper::toDTO)
-                .collect(Collectors.toList());
+        return pagoRepository.findAll().stream().map(PagoMapper::toDTO).toList();
     }
 
-    // BUSCAR POR ID
     public PagoDTO findById(Integer id) {
-
-        log.info("Buscando pago por id: {}", id);
-
+        log.info("Buscando pago por id {}", id);
         Pago pago = pagoRepository.findById(id)
-                .orElseThrow(() ->
-                        new ResourceNotFoundException(
-                                "Pago no encontrado"
-                        ));
-
+                .orElseThrow(() -> new ResourceNotFoundException("Pago no encontrado"));
         return PagoMapper.toDTO(pago);
     }
 
-    // GUARDAR
-    public PagoDTO save(PagoDTO dto) {
-
-        try {
-
-            log.info("Guardando pago");
-
-            Pago pago = PagoMapper.toEntity(dto);
-
-            pago = pagoRepository.save(pago);
-
-            return PagoMapper.toDTO(pago);
-
-        } catch (Exception e) {
-
-            log.error("Error al guardar pago: {}", e.getMessage());
-
-            throw e;
-        }
-    }
-
-    // ACTUALIZAR
-    public PagoDTO update(Integer id, PagoDTO dto) {
-
-        log.info("Actualizando pago");
-
-        Pago pago = pagoRepository.findById(id)
-                .orElseThrow(() ->
-                        new ResourceNotFoundException(
-                                "Pago no encontrado"
-                        ));
-
-        // actualizar campo por campo
-        pago.setMetodoPago(dto.getMetodoPago());
-        pago.setMonto(dto.getMonto());
-        pago.setFechaPago(dto.getFechaPago());
-        pago.setCuotas(dto.getCuotas());
-        pago.setEstadoPago(dto.getEstadoPago());
-        pago.setPagado(dto.getPagado());
-
-        pago = pagoRepository.save(pago);
-
+    public PagoDTO save(PagoRequestDTO dto) {
+        log.info("Guardando pago");
+        validarReserva(dto);
+        Pago pago = pagoRepository.save(PagoMapper.toEntity(dto));
         return PagoMapper.toDTO(pago);
     }
 
-    // ELIMINAR
+    public PagoDTO update(Integer id, PagoRequestDTO dto) {
+        log.info("Actualizando pago {}", id);
+        validarReserva(dto);
+
+        Pago pago = pagoRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Pago no encontrado"));
+
+        PagoMapper.updateEntity(pago, dto);
+        return PagoMapper.toDTO(pagoRepository.save(pago));
+    }
+
     public void delete(Integer id) {
-
-        log.info("Eliminando pago");
-
+        log.info("Eliminando pago {}", id);
         Pago pago = pagoRepository.findById(id)
-                .orElseThrow(() ->
-                        new ResourceNotFoundException(
-                                "Pago no encontrado"
-                        ));
-
+                .orElseThrow(() -> new ResourceNotFoundException("Pago no encontrado"));
         pagoRepository.delete(pago);
     }
 
-    // BUSCAR POR METODO DE PAGO
     public List<PagoDTO> findByMetodoPago(String metodoPago) {
-
-        log.info("Buscando pagos por método");
-
-        return pagoRepository
-                .findByMetodoPagoContainingIgnoreCase(
-                        metodoPago
-                )
-                .stream()
-                .map(PagoMapper::toDTO)
-                .collect(Collectors.toList());
+        return pagoRepository.findByMetodoPagoContainingIgnoreCase(metodoPago)
+                .stream().map(PagoMapper::toDTO).toList();
     }
 
-    // BUSCAR POR ESTADO
     public List<PagoDTO> findByEstadoPago(String estadoPago) {
+        return pagoRepository.findByEstadoPagoContainingIgnoreCase(estadoPago)
+                .stream().map(PagoMapper::toDTO).toList();
+    }
 
-        log.info("Buscando pagos por estado");
+    public List<PagoDTO> findByMontoBetween(Double montoMinimo, Double montoMaximo) {
+        if (montoMinimo > montoMaximo) {
+            throw new IllegalArgumentException("El monto minimo no puede ser mayor al monto maximo");
+        }
 
-        return pagoRepository
-                .findByEstadoPagoContainingIgnoreCase(
-                        estadoPago
-                )
-                .stream()
-                .map(PagoMapper::toDTO)
-                .collect(Collectors.toList());
+        return pagoRepository.buscarPorRangoMontoOrdenadoPorFechaDesc(montoMinimo, montoMaximo)
+                .stream().map(PagoMapper::toDTO).toList();
+    }
+
+    private void validarReserva(PagoRequestDTO dto) {
+        ReservaDTO reserva = reservaClient.obtenerReservaPorId(dto.getReservaId());
+
+        if (reserva == null || reserva.getId() == null) {
+            throw new ResourceNotFoundException("Reserva no encontrada");
+        }
+
+        if (reserva.getMontoTotal() != null && dto.getMonto() > reserva.getMontoTotal()) {
+            throw new IllegalArgumentException("El monto del pago no puede superar el monto total de la reserva");
+        }
     }
 }
